@@ -13,6 +13,7 @@
       <CodeGeneration compiler="Csc" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
     </Configuration>
   </Configurations>
+  <DeployTargets />
   <Contents>
     <File name="./NewStuff.cs" subtype="Code" buildaction="Compile" />
     <File name="./ConfParser.cs" subtype="Code" buildaction="Compile" />
