@@ -1,3 +1,9 @@
+2007-04-26  Sebastian Pölsterl  <marduk@k-d-w.org>
+
+	* src/libnsm/Downloaders/FtpDownloader.cs:
+	Added functionality to donwload from a FTP server.
+	Resuming and showing download progress is still missing.
+
 2007-04-18  Sebastian Pölsterl  <marduk@k-d-w.org>
 
 	* src/libnsm/Downloaders/HttpDownloader.cs
